fix: pic align

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ img{
     width: 40%;
     padding: 5px;
     display: block;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 30%;
+    margin-right: 20%;
 
 }
